--- a/less/mobile.less
+++ b/less/mobile.less
@@ -1,6 +1,5 @@
 @media all and (max-width:601px), all and (max-height: 450px){
 	body{
-		display: table;
 		background-color: #E2E3E4;
 	}
 
@@ -14,18 +13,19 @@
 
 	.modalWindow-601px-450px;
 
+	.button-close{
+		display: none;
+	}
+
 	#MobileVersionBoby{
-		display: flex;
+		display: block;
 		flex-direction: column;
 		width: 100vw;
 		background-color: #E2E3E4;
 
-		#add_event_button_mobile { bottom: 10px; right: 10px; }
+		#add_event_button_mobile { bottom: 10px; right: 10px; display: none; }
+		#add_event_button_mobile i{ font-size: 2.8rem; color: #5D4239; }
 
-		#add_event_button_mobile i{ 
-			font-size: 2.8rem; 
-			color: #5D4239;
-		}
 
 		/******  Fixed top header navigation  ******/
 		nav#mobile-header {
@@ -40,7 +40,8 @@
  			
 	 		#apply_event_button_mobile{ display: none; }
 
-			.button-collapse {
+			.button-collapse,
+			.button-close {
 				padding-left: 10px;
 				padding-right: 10px;
 				i {  font-size: 2.5rem; }
